logs/dag_id=booking_ingestion_v3/run_id=manual__2023-11-10T02:28:46.037801+00:00/task_id=copy_data_to_postgres/attempt=8.log
[2023-11-10T03:20:12.419+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: booking_ingestion_v3.copy_data_to_postgres manual__2023-11-10T02:28:46.037801+00:00 [queued]>
[2023-11-10T03:20:12.442+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: booking_ingestion_v3.copy_data_to_postgres manual__2023-11-10T02:28:46.037801+00:00 [queued]>
[2023-11-10T03:20:12.444+0000] {taskinstance.py:1361} INFO - Starting attempt 8 of 8
[2023-11-10T03:20:12.488+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): copy_data_to_postgres> on 2023-11-10 02:28:46.037801+00:00
[2023-11-10T03:20:12.500+0000] {standard_task_runner.py:57} INFO - Started process 569 to run task
[2023-11-10T03:20:12.509+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'booking_ingestion_v3', 'copy_data_to_postgres', 'manual__2023-11-10T02:28:46.037801+00:00', '--job-id', '18', '--raw', '--subdir', 'DAGS_FOLDER/main.py', '--cfg-path', '/tmp/tmpti2ry388']
[2023-11-10T03:20:12.511+0000] {standard_task_runner.py:85} INFO - Job 18: Subtask copy_data_to_postgres
[2023-11-10T03:20:12.595+0000] {task_command.py:416} INFO - Running <TaskInstance: booking_ingestion_v3.copy_data_to_postgres manual__2023-11-10T02:28:46.037801+00:00 [running]> on host a3e6249bf7b5
[2023-11-10T03:20:12.728+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='mike' AIRFLOW_CTX_DAG_ID='booking_ingestion_v3' AIRFLOW_CTX_TASK_ID='copy_data_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2023-11-10T02:28:46.037801+00:00' AIRFLOW_CTX_TRY_NUMBER='8' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-10T02:28:46.037801+00:00'
[2023-11-10T03:20:12.734+0000] {sql.py:274} INFO - Executing: 
            COPY booking_record FROM %(file_path)s DELIMITER ',' CSV HEADER;
            
[2023-11-10T03:20:12.755+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-10T03:20:12.772+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-10T03:20:12.792+0000] {sql.py:418} INFO - Running statement: 
            COPY booking_record FROM %(file_path)s DELIMITER ',' CSV HEADER;
            , parameters: None
[2023-11-10T03:20:12.798+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 2:             COPY booking_record FROM %(file_path)s DELIMITER...
                                             ^

[2023-11-10T03:20:12.813+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=booking_ingestion_v3, task_id=copy_data_to_postgres, execution_date=20231110T022846, start_date=20231110T032012, end_date=20231110T032012
[2023-11-10T03:20:12.838+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 18 for task copy_data_to_postgres (syntax error at or near "%"
LINE 2:             COPY booking_record FROM %(file_path)s DELIMITER...
                                             ^
; 569)
[2023-11-10T03:20:12.886+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-10T03:20:12.912+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
